# prometheus-core

./: README.md  pyproject.toml  requirements.txt  uvicorn.json
api/: server.py
cli/: prompt_cli.py
core/: api.py  archetypes.py  constraints.py  generator.py  mirror.py
presets/: archetypes.yaml
prometheus_core.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_api.py  test_dash_ui.py
ui/: app.py  app_async.py  callbacks.py  config.py  layout.py
